Fixed the width of the blog headers on mobile

--- a/css/plugins/blog.less
+++ b/css/plugins/blog.less
@@ -38,3 +38,14 @@
         }
     }
 }
+
+/* 960px > x */
+@media only screen and (max-width: 959px) {
+    .makeFullWidth {
+        .hfeed ~ .plugin_include_content {
+            > h2 {
+                width: 100vw;
+            }
+        }
+    }
+}
